--- a/imgui.ini
+++ b/imgui.ini
@@ -24,8 +24,8 @@ Size=1280,720
 Collapsed=0
 
 [Window][Login]
-Pos=500,200
-Size=300,200
+Pos=0,0
+Size=1280,720
 Collapsed=0
 
 [Window][Student Window]
@@ -74,6 +74,11 @@ Size=1280,720
 Collapsed=0
 
 [Window][BiblioCrypt Login]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Informations]
 Pos=0,0
 Size=1280,720
 Collapsed=0
